# sample-fastapi-oidc-uma

./: .gitattributes  README.md  docker-compose.yml  pyproject.toml  sample-realm.json
sample_fastapi_oidc_uma/: __main__.py
